# memscope

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: DESIGN.md
examples/: quick_start.py
memscope/: cli.py  report.py
memscope/backends/: __init__.py  base.py  mem0_adapter.py  vector_baseline.py
memscope/datasets/: __init__.py  longmemeval.py
memscope/evaluation/: __init__.py  metrics.py
memscope/readers/: __init__.py  base.py  openai_reader.py
