[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memscope"
version = "0.1.0"
description = "Lightweight, vendor-neutral agent memory evaluation harness"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "morry"}]
keywords = ["agent", "memory", "evaluation", "benchmark", "longmemeval", "mem0", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sentence-transformers>=2.2",
    "huggingface-hub>=0.20",
    "numpy>=1.24",
    "tqdm>=4.65",
]

[project.optional-dependencies]
mem0 = ["mem0ai>=0.1.0"]
openai = ["openai>=1.0"]
dev = ["pytest>=7.0"]

[project.scripts]
memscope = "memscope.cli:main"

[tool.setuptools.packages.find]
where = ["."]
